# gjpd-python

./: README.md  hello.py  pyproject.toml  requirements.txt
agent/langchain/: README.md  agent.py  app.py  requirements.in  requirements.txt
mcp/fast_api_mcp_server/: README.md  main.py
mcp/fast_mcp_server/: README.md  claude_desktop_config.json  main.py
mcp/fast_mcp_server/resources/: hello.py
mcp/fast_mcp_server/tools/: csv.py  math.py  us_weather.py
mcp/mcp_client/: client.py
mcp_server/: README.md  main.py  server.py
mcp_server/tools/: weather.py
mcp_server/utils/: file_reader.py  weather_get.py
openai/: conversation-state.py  function-calling.py  image-input.py  introduction.py  structured-output.py  text-input.py  web-search.py
