[project]
name = "gjpd-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langgraph>=0.3.34",
    "langserve>=0.3.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
]
